src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>soco__Amount_From_Agreements__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The total amount from payments resulting from an agreement.</inlineHelpText>
        <label>Amount From Agreements</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>soco__Amount_Of_One_Time_Agreements__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The total amount of pledges one-time agreements.</inlineHelpText>
        <label>Amount Of One-Time Agreements</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>soco__Amount_Of_Payments__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The total amount of payments not resulting from an agreement.</inlineHelpText>
        <label>Amount Of Payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>soco__Avarage_Gift_Amount__c</fullName>
        <formula>IF( soco__Number_of_Payments__c &gt; 0, soco__Amount_Of_Payments__c /  soco__Number_of_Payments__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avarage Gift Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>soco__Destination__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination</label>
        <referenceTo>soco__Destination__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>soco__Generate_Payment_Reference_for_Members__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate Payment Reference for Members</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>soco__Number_Of_Agreements__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The number of agreements that have this campaign listed as &quot;originating campaign&quot;</inlineHelpText>
        <label>Number Of Agreements</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>soco__Number_Of_New_Contacts__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of new contacts (relations between persons and accounts/households) due to this campaign</inlineHelpText>
        <label>Number Of New Contacts</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>soco__Number_Of_New_Households__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The number of new households registered due to this campaign.</inlineHelpText>
        <label>Number Of New Households</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>soco__Number_Of_One_Time_Agreements__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The total number of one-time agreements resulting from this campaign.</inlineHelpText>
        <label>Number Of One-Time Agreements</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>soco__Number_Of_Payments_From_Agreements__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The number of payments resulting from an agreement.</inlineHelpText>
        <label>Number Of Payments From Agreements</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>soco__Number_Of_new_Persons__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The number of new persons resulting from this campaign.</inlineHelpText>
        <label>Number Of new Persons</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>soco__Number_of_New_Accounts__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The number of new accounts (ex households)</inlineHelpText>
        <label>Number of New Accounts</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>soco__Number_of_Payments__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The number of payments not resulting from an agreement.</inlineHelpText>
        <label>Number of Payments</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>soco__Payment_Method__c</fullName>
        <description>Payment methods that will be set to matched transactions in matching batch</description>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Banktransfer</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Acceptgiro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>soco__Payment_Reference__c</fullName>
        <label>Payment Reference</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>soco__Realized_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The total amount of money actually received.</inlineHelpText>
        <label>Realized Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>soco__Reference_number__c</fullName>
        <description>Used for generating payment references</description>
        <inlineHelpText>Used for generating payment references</inlineHelpText>
        <label>Reference number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>soco__Responded_Status__c</fullName>
        <defaultValue>&quot;Responded&quot;</defaultValue>
        <description>Enter the status Campaign Members should have if a payment is received for this Campaign Member.</description>
        <inlineHelpText>Enter the status Campaign Members should have if a payment is received for this Campaign Member.</inlineHelpText>
        <label>Responded Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>soco__Total_Yearly_Value_Of_Agreements__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The total value (yearly) of all agreements. (e.g. 25 euro/month = 300 yearly)</inlineHelpText>
        <label>Total Yearly Value Of Agreements</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <sharingModel>FullAccess</sharingModel>
</CustomObject>